<resources>
    <string name="app_name">Flarum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discussion">问答</string>
    <string name="edit_hint">说点什么吧…</string>
    <string name="avatar">头像</string>
    <string name="edit">编辑</string>
    <string name="like">点赞</string>
    <string name="bookmark">收藏</string>
    <string name="share">分享</string>
    <string name="back">返回</string>
    <string name="reply">回复</string>
    <string name="submit">发布</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_success">登录成功</string>
</resources>