<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/username"
                android:id="@+id/textInputLayout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_6">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                android:id="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_6">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:text="@string/register"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_6"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="@dimen/dp_6"
                android:layout_marginBottom="@dimen/dp_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fab_login"
                android:text="@string/login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>